# api/4min/search/python-flask-server/swagger_server/models/__init__.py
@@ -4,3 +4,4 @@ from __future__ import absolute_import
 # import models into model package
 from .feed_back_form import FeedBackForm
 from .search_request import SearchRequest
+from .search_response import SearchResponse
