# api/4min/search/python-flask-server/swagger_server/swagger/swagger.yaml
@@ -35,8 +35,8 @@ paths:
         schema:
           $ref: "#/definitions/FeedBackForm"
       responses:
-        default:
-          description: "sucess"
+        200:
+          description: "success"
       x-swagger-router-controller: "swagger_server.controllers.feedback_controller"
   /search/items_to_items:
     get:
@@ -57,8 +57,10 @@ paths:
         schema:
           $ref: "#/definitions/SearchRequest"
       responses:
-        default:
+        200:
           description: "success"
+          schema:
+            $ref: "#/definitions/SearchResponse"
       x-swagger-router-controller: "swagger_server.controllers.search_controller"
   /search/items_to_client:
     get:
@@ -77,13 +79,17 @@ paths:
         description: "todo"
         required: true
         schema:
-          $ref: "#/definitions/SearchRequest"
+          $ref: "#/definitions/SearchResponse"
       responses:
-        default:
+        200:
           description: "success"
+          schema:
+            $ref: "#/definitions/SearchRequest"
       x-swagger-router-controller: "swagger_server.controllers.search_controller"
 definitions:
   SearchRequest:
+    type: "object"
+  SearchResponse:
     type: "object"
   FeedBackForm:
     type: "object"
